--- a/flaskr/app.yaml
+++ b/flaskr/app.yaml
@@ -1,1 +1,7 @@
 runtime: python39
+
+env_variables:
+  CLOUD_SQL_USERNAME: admin
+  CLOUD_SQL_PASSWORD: adminpassword
+  CLOUD_SQL_DATABASE_NAME: product
+  CLOUD_SQL_CONNECTION_NAME: ck-ad-1:europe-west2:product-database
