extract mongoDB connection into yaml file

--- a/flaskr/app.yaml
+++ b/flaskr/app.yaml
@@ -5,3 +5,7 @@ env_variables:
   CLOUD_SQL_PASSWORD: adminpassword
   CLOUD_SQL_DATABASE_NAME: product
   CLOUD_SQL_CONNECTION_NAME: ck-ad-1:europe-west2:product-database
+
+  MONGO_DB_USERNAME: admin
+  MONGO_DB_PASSWORD: adminpassword
+  MONGO_DB_CONNECTION_NAME: adparceltracker
